--- a/form.html
+++ b/form.html
@@ -11,21 +11,21 @@
 </head>
 <body>
     <main>
-        <header>
-            <nav>
+        <header class="container-links">
+            <h3>Samuel Andrade</h3>
+            <nav">
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li><a href="https://github.com/SamuelAndrade-Dev"><img src="img/github.png" alt=""></a></li>
+                    <li><a href="https://www.linkedin.com/in/samuel-andrade-525031338/"><img src="img/linkedin.png" alt=""></a></li>
                 </ul>
             </nav>
         </header>
-        <h3>Novo Cadastro</h3>
-        <form class="container">
-            <fieldset class="contant">
+        <form class="container-principal">
+            <fieldset class="container">
+                <h3>Novo Cadastro</h3>
                 <section>
-                    <label for="nome">Nome</label>
-                    <input type="text" name="nome" id="nome" placeholder="Nome Completo">
+                    <label for="username">Nome</label>
+                    <input type="text" name="username" id="username" placeholder="Nome Completo">
                 </section>
                 <section>
                     <label for="data">Data de Nascimento</label>
@@ -43,19 +43,21 @@
                     <label for="numero">Telefone</label>
                     <input type="tel" name="numero" id="numero" placeholder="Ex: 61 992222222">
                 </section>
-                <section>
-                    <label for="sexo">Sexo</label>
-                    <input type="checkbox" name="sexo" id="sexo">
-                    <input type="checkbox" name="sexo" id="sexo">
-                </section>
-                <section>
-                    <button id="">
-                        <a href="">Cadastrar</a>
-                    </button>
+                <section class="check-box">
+                    <p>Gênero:</p>
+                    <label for="genero">Masculino</label>
+                    <input type="checkbox" name="genero" id="genero">
+                    <label for="">Feminino</label>
+                    <input type="checkbox" name="genero" id="genero">
                 </section>
                 <section>
                     <label for="feedback">Deixe seu Feedback:</label>
                     <input type="text" placeholder="O que poderiamos melhorar?" name="feedback" id="feedback" class="feedback">
+                </section>
+                <section>
+                    <button id="" type="submit">
+                        Enviar
+                    </button>
                 </section>
             </fieldset>
         </form>
